Web Inspector: REGRESSION(r266885): dyld: Symbol not found: __ZN9Inspector17BackendDispatcher12sendResponseElON3WTF6RefPtrINS1_8JSONImpl6ObjectENS1_13DumbPtrTraitsIS4_EEEEb https://bugs.webkit.org/show_bug.cgi?id=216486

Reviewed by Joseph Pecoraro.

* inspector/InspectorBackendDispatcher.h:
* inspector/InspectorBackendDispatcher.cpp:
(Inspector::BackendDispatcher::sendResponse):
Add back overloads removed in r266885 so that the symbols exist.


Canonical link: https://commits.webkit.org/229318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267028 268f45cc-cd09-0410-ab3c-d52691b4dbfc